# Praxyk

./: .gitignore  .gitmodules  .travis.yml  README.md  api_server.py  build.sh
.praxyk/: README
.praxyk/apiconfig/: config  rootconfig  stripeconfig
.praxyk/dbconfig/: config
api/: .gitignore  .pip_install  .ubuntu_install  README.md  __init__.py  api_build.sh  api_server.py  build.sh  config.py  coupon_generator.py
api/deploy/: .ubuntu_install  api.praxyk.com.conf  api_server.wsgi  deploy.sh
api/libs/: __init__.py  auth_route.py  auth_util.py  confirm_route.py  coupon_route.py  payment_handler_route.py  payment_route.py  request_route.py  result_route.py  results_handler.py  results_route.py  route_fields.py  transactions_route.py  users_route.py
api/libs/pod/: __init__.py  bayes_spam_route.py  face_detect_route.py  ocr_route.py  pod_route.py
api/models/: __init__.py
api/models/nosql/: result_base.py
api/models/nosql/pod/: __init__.py
api/models/sql/: result_base.py  role.py  token.py  transaction.py  user.py  users.py
api/models/sql/pod/: pod_result.py
api/queue/: get_redis_url.py  start_worker.py  task_lib.py
api/templates/: coupon_code_email.html  credit_card_charge_failed_email.html
api/tests/: regression.py
clients/: README.md  praxyk_client.py
container/: Dockerfile
container/api/: conn.py  queue.py
daemon/: api  controller.py  daemon.py  daemon_utils.py  deploy.py  devops_client.py  local.py
daemon/container/: Dockerfile  build.sh  build_master.sh  config.py  docker_config.py
daemon/container/api/: conn.py  queue.py
devops/: README.md
devops/client/: README.md  devops_client.py
devops/server/: API_docs.md  README.md  _fix_path_.py  devops_request_handler.py  example_app.py  setup.sh
devops/server/lib/: auth_util.py  db_util.py  log_util.py  vm_util.py
devops/server/libs/: API_docs.md  auth_util.py  db_util.py  devops_util.py  log_util.py  vm_util.py
devops/server/libs/digitalocean/: baseapi.py
devops/server/unittest/: _fix_path_.py  auth_unit_tests.py  auth_util_tests.py  db_unit_tests.py  devops_unit_tests.py  regression.py  regression_call_history.txt  server_tests.py  server_unit_tests.py  setup.sh  unit_test.py  vm_unit_tests.py  vm_util_tests.py
docs/: ReleasePlanPlanning.docx  Sprint1Plan.docx  build.sh
docs/sprint1/: Release Presentation.pptx
docs/wiki/: clone_wiki.sh  compile_wiki.sh  update_wiki.sh
docs/wiki/praxyk_wiki_html/: Build-Environments-API.html  Build-Environments-DB.html  Build-Environments-Master.html  Build-Environments-PODConfig.html  Build-Environments-TLPConfig.html  Build-Environments.html  Configuration-stuff.html  DB-Models.html  Data-Sets.html  DevOps-API.html  DevOps-Client.html  DevOps-Server.html  DevOps.html  Home.html  Module-"master"-and-queue.html  POD.html  Praxyk-API-Clients.html  Praxyk-API.html  TLP.html  Website.html  _Sidebar.html
models/: README.md  __init__.py  build.sh
models/nosql/: __init__.py  result_base.py
models/nosql/pod/: result_pod_face_detect.py  result_pod_ocr.py
models/sql/: payment_info.py  payments.py  token.py  transaction.py  user.py
pod/: CMakeLists.txt  CTestTestfile.cmake  build.sh  build.sh.bak  cmake_uninstall.cmake  pod_build.sh  praxyk-build-pod.sh  sources.list  tempbuild.sh  test.py
pod-container/: __init__.py  api_server.py
pod-container/api/: README.md  __init__.py
pod-container/api/models/sql/: __init__.py  result_base.py
pod-container/api/queue/: start_worker.sh
pod-container/libs/: __init__.py  auth_route.py  users_route.py
pod-container/models/: README.md  __init__.py
pod-container/models/sql/: transaction.py
pod-container/queue/: __init__.py
pod-container/templates/: confirm_email.html
pod/cmake/Modules/: FindCLANDMARK.cmake  FindTesseract.cmake
pod/include/: CTestTestfile.cmake
pod/include/praxyk/: CMakeLists.txt  CTestTestfile.cmake  config.hpp  facial_rec.hpp  ocr.hpp  paths.hpp  spam.hpp
pod/lib/: #ocr.cpp#  CMakeLists.txt  CTestTestfile.cmake  facial_rec.cpp  ocr.cpp  paths.cpp.in  spam.cpp
pod/lib/clandmark/: CLandmark.cpp  CLandmark.h  CMakeLists.txt
pod/lib/landmark/: CMakeLists.txt
pod/patches/: mlpack_lib_only.patch
pod/python/: CMakeLists.txt  CTestTestfile.cmake
pod/python/praxyk/: CMakeLists.txt  CTestTestfile.cmake  __init__.py  facial.py  facial_tools.py  features.txt  get_feature.py  praxyk_docstrings.i  praxyk_python.i  spam.py
pod/tests/: CMakeLists.txt  CTestTestfile.cmake  pod_facial_rec_test.py  pod_ocr_test.py  pod_ocr_test.sh  pod_spam_test.py  pod_spam_test.sh  unit_test_template.sh.in
queue/: README.md  __init__.py  build.sh  start_worker.py  task_lib.py
queue/images/: 42text1.jpg_1  42text2.jpg_2  42text3.jpg_3
server/: CMakeLists.txt
server/cmake/Modules/: FindTesseract.cmake
server/include/praxyk/: CMakeLists.txt  praxyk.hpp  spam.hpp  src1.hpp  src2.hpp
server/lib/: CMakeLists.txt  ocr.cpp  praxyk.cpp  spam.cpp  src1.cpp  src2.cpp
server/lib/neural2d/: CMakeLists.txt  neural2d-core.cpp
server/python/: __init__.py  praxyk_python.i
server/utils/: CMakeLists.txt  praxyk-python-util.py  praxyk-util1.cpp  praxyk-util2.cpp
website/: dashboard.html  documentation.html  index.html  login.html  parameters_8000.py  privacy_policy.html  register.html  routes.py  template.html  terms_of_service.html  welcome.w2p
website/applications/Praxyk/controllers/: default.py
website/applications/Praxyk/databases/: storage.sqlite
website/applications/Praxyk/errors/: 127.0.0.1.2015-10-01.22-33-18.c3b738f6-0259-4dec-8c57-e09f21cf99ab  127.0.0.1.2015-10-01.22-33-50.93710d33-4517-4b72-abe4-09fc61ed357c  127.0.0.1.2015-10-05.13-02-50.334bbee4-d3e7-497c-9a3e-f710f529bbc9  127.0.0.1.2015-10-05.13-03-03.9571f7cc-272b-4bee-abe9-e8d21db234ae  127.0.0.1.2015-10-05.13-03-32.84308a11-14b5-473a-a22b-a025eb3bf67e  (+1 more)
website/deposit/: web2py.app.examples.w2p  web2py.app.welcome.w2p  web2py.plugin.layout_RedCity.w2p  web2py.plugin.layout_Spaced.w2p
website/scripts/: dashboard.js  footer.js  init.js  login.js  menu.js  praxyk.js  register.js
website/styles/: markdown.css
(+46 files in other folders)
